contrail-helm/3-tier-app/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: hcm-app-1
  annotations:
    http.port: "443"
spec: 
  backend:
    serviceName: web-svc-1
    servicePort: 80
