contrail-helm/3-tier-app/templates/policy-web-to-app.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: webtoapp 
  namespace: default
spec:
  podSelector:
    matchLabels:
      tier: app
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          tier: web
